--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -446,9 +446,7 @@ Use case resumes at step 2.
 
 
 [appendix]
-== Glossary (do along the way)
-
-Define terms that are worth recording. Eg:
+== Glossary
 
 [[mainstream-os]] Mainstream OS::
 Windows, Linux, Unix, OS-X
