--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -933,26 +933,21 @@ Expected: Elisa will prompt you that the task already exist in the list and cann
 
 === Game mode testing
 
-. Entering game mode (easy)
-
 image::SnakeGame.PNG[500,600]
 
+. Entering game mode (easy)
 .. Test case: `game` +
 Expected: Enters easy mode of game (Refer to figure above)
-
 .. Test case: `game e` +
 Expected: Same as above.
-
-.. Test case: `game EASY` +
+.. Test case: `game EASY` 
 Expected: Same as above.
-
-. Entering game mode (hard)
 
 image::snakegamehard.PNG[500,600]
 
+. Entering game mode (hard)
 .. Test case: `game H` +
 Expected: Enters hard mode of game (Refer to figure above)
-
 .. Test case: `game hard` +
 Expected: Same as above.
 
